fixed bugs imporoved verbosity and python3 support
fixed issue with verbosity throwing and error
adjusted urllib and read file io to by python3 friendly
returned to print() to be python3 friendly
updated default config file

--- a/check_wan.cfg
+++ b/check_wan.cfg
@@ -1,7 +1,8 @@
 [mail]
-password = S0BsYWhhcmkyMDEwIQo=
+password = 
 from = cgseller@mac.com
 to = cgseller@gmail.com
 
 [ipservice]
-url = 
+url = 'http://api.ipify.org?format=json'
+
