Made the to/from default configs more generic

--- a/check_wan.cfg
+++ b/check_wan.cfg
@@ -1,7 +1,7 @@
 [mail]
 password = 
-from = cgseller@mac.com
-to = cgseller@gmail.com
+from = sender@origin.dom.ain
+to = receiver@dest.dom.ain
 
 [ipservice]
 url = 'http://api.ipify.org?format=json'
